# dup-crypto-rs

./: .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  README.md  release.toml
benches/: ring_vs_sodium.rs
src/: CHANGELOG.md  dewif.rs  dewip.rs  lib.rs  private_message.rs  rand.rs  seeds.rs
src/bases/: b58.rs
src/dewif/: read.rs  write.rs
src/dewip/: read.rs  write.rs
src/hashs/: mod.rs
src/keys/: bin_signable.rs  ed25519.rs  mod.rs  text_signable.rs  x25519.rs
src/private_message/: authentication.rs
