[package]
name = "dup-crypto"
version = "0.12.0"
authors = ["elois <c@elo.tf>"]
description = "Manage cryptographic operations for DUniter Protocols and the Duniter eco-system most broadly."
repository = "https://git.duniter.org/libs/dup-crypto-rs"
readme = "README.md"
keywords = ["keys", "cryptography", "duniter", "dunitrust"]
license = "AGPL-3.0"
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
aes = { version = "0.3.2", optional = true }
arrayvec = { version = "0.5.1", features = ["array-sizes-33-128", "array-sizes-129-255"], optional = true }
base64 = "0.11.0"
bs58 = "0.3.0"
byteorder = "1.3.2"
ring = "0.16.9"
scrypt = { version = "0.2", default-features = false }
serde = { version = "1.0.*", features = ["derive"], optional = true }
thiserror = "1.0.11"
unwrap = "1.2.1"
zeroize = { version = "1.1.0", features = ["zeroize_derive"] }

[dev-dependencies]
bincode = "1.2.0"
criterion = "0.3.1"
sodiumoxide = "0.2.5"

[[bench]]
name = "ring_vs_sodium"
harness = false

[features]
default = ["dewif", "rand", "ser"]

aes256 = ["aes"]
dewif = ["aes256", "arrayvec"]
rand = []
ser = ["serde"]
