[package]
name = "dup-crypto"
version = "0.8.4"
authors = ["nanocryk <nanocryk@duniter.org>", "elois <elois@duniter.org>"]
description = "Manage cryptographic operations for DUPs (DUniter Protocols)."
repository = "https://git.duniter.org/libs/dup-crypto-rs"
readme = "README.md"
keywords = ["keys", "cryptography", "duniter", "dunitrust"]
license = "AGPL-3.0"
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
base64 = "0.11.0"
bs58 = "0.3.0"
byteorder = "1.3.2"
ring = "0.16.9"
scrypt = { version = "0.2", default-features = false }
serde = { version = "1.0.*", features = ["derive"], optional = true }
thiserror = "1.0.11"
unwrap = "1.2.1"
zeroize = { version = "1.1.0", features = ["zeroize_derive"] }

[dev-dependencies]
bincode = "1.2.0"

[features]
default = ["ser"]
ser = ["serde"]
